--- a/index.html
+++ b/index.html
@@ -3,35 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>[Your Name] - Portfolio</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #f8f9fa;
+            color: #343a40;
         }
         header {
-            background: #007bff;
+            background: #343a40;
             color: white;
             padding: 20px;
             text-align: center;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
         }
         nav a {
             color: white;
-            margin: 0 10px;
+            margin: 0 15px;
             text-decoration: none;
+            font-weight: bold;
         }
         .hero {
             position: relative;
             text-align: center;
             color: white;
+            margin-bottom: 20px;
         }
         .hero img {
             width: 100%;
             height: auto;
-            filter: brightness(0.7);
+            filter: brightness(0.5);
         }
         .hero h1 {
             position: absolute;
@@ -39,6 +42,7 @@
             left: 50%;
             transform: translate(-50%, -50%);
             font-size: 3em;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
         }
         .profile {
             text-align: center;
@@ -48,6 +52,7 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
+            border: 3px solid #007bff;
         }
         .about, .skills, .work-history {
             padding: 20px;
@@ -56,9 +61,11 @@
             background: white;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             margin-top: 20px;
+            border-radius: 8px;
         }
         h2 {
             text-align: center;
+            color: #007bff;
         }
         ul {
             list-style-type: none;
@@ -73,37 +80,41 @@
         footer {
             text-align: center;
             padding: 20px;
-            background: #007bff;
+            background: #343a40;
             color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>My Portfolio</h1>
+    <h1>[Your Name]</h1>
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
         <a href="#work">Work History</a>
+        <a href="#contact">Contact</a>
     </nav>
 </header>
 
 <div class="hero" id="home">
-    <img src="https://via.placeholder.com/1200x400" alt="Hero Image">
-    <h1>Hello, I'm [Your Name]</h1>
+    <img src="hero-image.jpg" alt="Hero Image">
+    <h1>Welcome to My Portfolio</h1>
 </div>
 
 <div class="profile">
-    <img src="https://via.placeholder.com/150" alt="Profile Picture">
+    <img src="profile.jpg" alt="Profile Picture">
     <h2>[Your Name]</h2>
-    <p>Web Developer with a passion for creating beautiful and functional web applications.</p>
+    <p>Web Developer | Passionate about creating dynamic and responsive web applications.</p>
 </div>
 
 <section class="about" id="about">
     <h2>About Me</h2>
-    <p>I am a dedicated web developer with experience in building responsive and user-friendly websites. My goal is to continually learn and adapt to the ever-changing web technologies.</p>
+    <p>I am a dedicated web developer with experience in building user-friendly, responsive websites and web applications. My expertise lies in both frontend and backend development, and I am always eager to learn new technologies and improve my skills.</p>
 </section>
 
 <section class="skills" id="skills">
@@ -135,8 +146,14 @@
     </ul>
 </section>
 
+<section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <p>If you'd like to get in touch, feel free to reach out via <a href="mailto:your-email@example.com">email</a> or connect with me on <a href="https://linkedin.com" style="color: #007bff;">LinkedIn</a>.</p>
+</section>
+
 <footer>
-    <p>Connect with me on <a href="https://linkedin.com" style="color: white;">LinkedIn</a></p>
+    <p>&copy; [Year] [Your Name]. All rights reserved.</p>
 </footer>
+
 </body>
 </html>
