--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>[Your Name] - Portfolio</title>
+    <title>Evanson Mwangi - Portfolio</title>
     <style>
         body {
             font-family: 'Arial', sans-serif;
@@ -13,7 +13,7 @@
             color: #343a40;
         }
         header {
-            background: #343a40;
+            background: #007bff; /* Blue */
             color: white;
             padding: 20px;
             text-align: center;
@@ -24,6 +24,10 @@
             margin: 0 15px;
             text-decoration: none;
             font-weight: bold;
+            transition: color 0.3s;
+        }
+        nav a:hover {
+            color: #ff69b4; /* Pink */
         }
         .hero {
             position: relative;
@@ -52,9 +56,9 @@
             width: 150px;
             height: 150px;
             border-radius: 50%;
-            border: 3px solid #007bff;
+            border: 3px solid #ff69b4; /* Pink */
         }
-        .about, .skills, .work-history {
+        .about, .skills, .work-history, .contact, .education {
             padding: 20px;
             max-width: 800px;
             margin: auto;
@@ -65,7 +69,7 @@
         }
         h2 {
             text-align: center;
-            color: #007bff;
+            color: #007bff; /* Blue */
         }
         ul {
             list-style-type: none;
@@ -80,51 +84,67 @@
         footer {
             text-align: center;
             padding: 20px;
-            background: #343a40;
+            background: #007bff; /* Blue */
             color: white;
             position: relative;
             bottom: 0;
             width: 100%;
+        }
+        .social-links a {
+            margin: 0 10px;
+            color: #007bff; /* Blue */
+            text-decoration: none;
+            transition: color 0.3s;
+        }
+        .social-links a:hover {
+            color: #ff69b4; /* Pink */
         }
     </style>
 </head>
 <body>
 
 <header>
-    <h1>[Your Name]</h1>
+    <h1>Evanson Mwangi</h1>
     <nav>
         <a href="#home">Home</a>
         <a href="#about">About Me</a>
         <a href="#skills">Skills</a>
         <a href="#work">Work History</a>
+        <a href="#education">Education</a>
         <a href="#contact">Contact</a>
     </nav>
 </header>
 
 <div class="hero" id="home">
-    <img src="hero-image.jpg" alt="Hero Image">
-    <h1>Welcome to My Portfolio</h1>
+    <img src="C:\Users\dell 7404\Downloads\DSC_0923.jpg" alt="Hero Image">
+    <h1>Welcome to My Website</h1>
 </div>
 
 <div class="profile">
-    <img src="profile.jpg" alt="Profile Picture">
-    <h2>[Your Name]</h2>
-    <p>Web Developer | Passionate about creating dynamic and responsive web applications.</p>
+    <h2>Profile</h2>
+    <p>Web Developer (Frontend & Backend) | Economist | Statistician | Programmer | Analyst.</p>
 </div>
 
 <section class="about" id="about">
     <h2>About Me</h2>
-    <p>I am a dedicated web developer with experience in building user-friendly, responsive websites and web applications. My expertise lies in both frontend and backend development, and I am always eager to learn new technologies and improve my skills.</p>
+    <p>Hello! I’m Evanson Mwangi, a passionate web developer and designer with a keen interest in the intersection of technology and business. My journey into the digital realm began with a fascination for web design, where I discovered the power of creating visually appealing and user-friendly websites. I thrive on crafting experiences that not only look great but also function seamlessly.</p>
+    <p>In addition to web design, I have a strong background in economics and statistics. I believe that understanding data is crucial in today’s data-driven world. This knowledge allows me to make informed decisions and create impactful solutions that resonate with users and stakeholders alike. I enjoy analyzing trends and using statistical methods to enhance my projects, ensuring they meet both aesthetic and analytical standards.</p>
+    <p>Programming is another passion of mine. I love the challenge of solving complex problems and bringing ideas to life through code. Whether it’s developing dynamic web applications or diving into backend development, I am always eager to learn new programming languages and frameworks.</p>
+    <p>Moreover, I have a strong interest in marketing. I understand that a beautiful website or application is only effective if it reaches its audience. My goal is to merge my technical skills with marketing strategies to create comprehensive digital solutions that not only engage users but also drive business growth.</p>
+    <p>In my free time, I enjoy staying updated with the latest trends in web technologies and marketing strategies, continually seeking ways to enhance my skills and knowledge. I’m excited about the possibilities that lie ahead and look forward to making meaningful contributions to the field!</p>
 </section>
 
 <section class="skills" id="skills">
     <h2>Skills</h2>
     <ul>
-        <li>JavaScript</li>
         <li>HTML & CSS</li>
-        <li>React</li>
-        <li>Node.js</li>
-        <li>Git & GitHub</li>
+        <li>JavaScript</li>
+        <li>React & Node.js</li>
+        <li>Data Analysis & Statistics</li>
+        <li>Marketing Strategy</li>
+        <li>Communication</li>
+        <li>Problem Solving</li>
+        <li>Adaptability</li>
     </ul>
 </section>
 
@@ -132,27 +152,53 @@
     <h2>Work History</h2>
     <ul>
         <li>
-            <strong>Frontend Developer</strong> - Company Name (Year - Year)
-            <p>Developed and maintained responsive web applications, collaborated with designers and backend developers, and ensured optimal user experience.</p>
+            <strong>Marketer</strong> - Company Name (Year - Year)
+            <p>Developed and implemented marketing strategies to increase brand awareness and drive sales. Analyzed market trends and customer needs to develop targeted campaigns. Collaborated with cross-functional teams to enhance product visibility and customer engagement.</p>
         </li>
         <li>
-            <strong>Web Developer Intern</strong> - Company Name (Year - Year)
-            <p>Assisted in the development of user-friendly interfaces, conducted testing, and provided support for various web projects.</p>
+            <strong>Financial Consultant</strong> - Company Name (Year - Year)
+            <p>Provided expert financial advice to clients, including investment strategies, risk management, and financial planning. Conducted comprehensive market analysis and helped clients make informed financial decisions. Developed financial models and forecasts to guide clients in achieving their financial goals.</p>
         </li>
         <li>
-            <strong>Junior Developer</strong> - Company Name (Year - Year)
-            <p>Worked on a team to develop web applications, wrote clean and efficient code, and participated in code reviews.</p>
+            <strong>Salesperson</strong> - Company Name (Year - Year)
+            <p>Engaged customers to understand their needs and recommend appropriate products and services. Achieved and exceeded sales targets through effective communication and relationship-building. Managed inventory and maintained a high level of customer satisfaction.</p>
+        </li>
+    </ul>
+</section>
+
+<section class="education" id="education">
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <strong>Bachelor of Science in Economics and Statistics</strong><br>
+            University Name, Year - Year<br>
+            Relevant Coursework: 
+            <ul>
+                <li>Microeconomics</li>
+                <li>Macroeconomics</li>
+                <li>Statistical Methods</li>
+                <li>Data Analysis</li>
+                <li>Financial Markets</li>
+                <li>Marketing Principles</li>
+                <li>Web Development</li>
+                <li>Programming Fundamentals</li>
+            </ul>
         </li>
     </ul>
 </section>
 
 <section class="contact" id="contact">
     <h2>Contact Me</h2>
-    <p>If you'd like to get in touch, feel free to reach out via <a href="mailto:your-email@example.com">email</a> or connect with me on <a href="https://linkedin.com" style="color: #007bff;">LinkedIn</a>.</p>
+    <p>If you'd like to get in touch, feel free to reach out via <a href="mailto:jobsmwangi8@gmail.com">email</a> or connect with me on <a href="https://linkedin.com" style="color: #007bff;">LinkedIn</a>.</p>
+    <div class="social-links">
+        <h3>Connect with me:</h3>
+        <a href="https://github.com/Le-kangi/" target="_blank">GitHub</a>
+        <a href="https://linkedin.com" target="_blank">LinkedIn</a>
+    </div>
 </section>
 
 <footer>
-    <p>&copy; [Year] [Your Name]. All rights reserved.</p>
+    <p>&copy; 2024 Evanson Mwangi. All rights reserved.</p>
 </footer>
 
 </body>
