--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 </header>
 
 <div class="hero" id="home">
-    <img src="C:\Users\dell 7404\Downloads\DSC_0923.jpg" alt="Hero Image">
+    <img src="DSC_0923.jpg" alt="Hero Image">
     <h1>Welcome to My Website</h1>
 </div>
 
