--- a/index.html
+++ b/index.html
@@ -137,11 +137,12 @@
 <section class="skills" id="skills">
     <h2>Skills</h2>
     <ul>
-        <li>HTML & CSS</li>
-        <li>JavaScript</li>
-        <li>React & Node.js</li>
+        <li>ACTIVE LISTENING</li>
+        <li>PROGRAMMING</li>
+        <li>CUSTOMER SERVICE</li>
         <li>Data Analysis & Statistics</li>
-        <li>Marketing Strategy</li>
+        <li>Marketing</li>       
+        <li>Negotiation</li>
         <li>Communication</li>
         <li>Problem Solving</li>
         <li>Adaptability</li>
@@ -152,15 +153,15 @@
     <h2>Work History</h2>
     <ul>
         <li>
-            <strong>Marketer</strong> - Company Name (Year - Year)
+            <strong>Marketer</strong> - CARSPA AUTOMOTIVE (2024)
             <p>Developed and implemented marketing strategies to increase brand awareness and drive sales. Analyzed market trends and customer needs to develop targeted campaigns. Collaborated with cross-functional teams to enhance product visibility and customer engagement.</p>
         </li>
         <li>
-            <strong>Financial Consultant</strong> - Company Name (Year - Year)
+            <strong>Financial Consultant</strong> - PREMIER CREDIT LTD (2023)
             <p>Provided expert financial advice to clients, including investment strategies, risk management, and financial planning. Conducted comprehensive market analysis and helped clients make informed financial decisions. Developed financial models and forecasts to guide clients in achieving their financial goals.</p>
         </li>
         <li>
-            <strong>Salesperson</strong> - Company Name (Year - Year)
+            <strong>Salesperson</strong> - LISAM SOLUTION (2022-2023)
             <p>Engaged customers to understand their needs and recommend appropriate products and services. Achieved and exceeded sales targets through effective communication and relationship-building. Managed inventory and maintained a high level of customer satisfaction.</p>
         </li>
     </ul>
@@ -179,8 +180,6 @@
                 <li>Statistical Methods</li>
                 <li>Data Analysis</li>
                 <li>Financial Markets</li>
-                <li>Marketing Principles</li>
-                <li>Web Development</li>
                 <li>Programming Fundamentals</li>
             </ul>
         </li>
