--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </li>
         <li>
             <strong>Financial Consultant</strong> - PREMIER CREDIT LTD (2023)
-            <p>Provided expert financial advice to clients, including investment strategies, risk management, and financial planning. Conducted comprehensive market analysis and helped clients make informed financial decisions. Developed financial models and forecasts to guide clients in achieving their financial goals.</p>
+            <p>Provided expert credit financial advice to clients, including investment strategies, risk management, and financial planning. Conducted comprehensive market analysis and helped clients make informed financial decisions. Developed financial models and forecasts to guide clients in achieving their financial goals.</p>
         </li>
         <li>
             <strong>Salesperson</strong> - LISAM SOLUTION (2022-2023)
