--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 </div>
 
 <div class="profile">
-    <h2>Profile</h2>
+    <h2>PROFILE</h2>
     <p>Web Developer (Frontend & Backend) | Economist | Statistician | Programmer | Analyst.</p>
 </div>
 
@@ -249,7 +249,7 @@
 </section>
 
 <section class="skills" id="skills">
-    <h2>Skills</h2>
+    <h2>COMPETENCIES</h2>
     <ul>
         <li>ACTIVE LISTENING</li>
         <li>PROGRAMMING</li>
@@ -264,7 +264,7 @@
 </section>
 
 <section class="work-history" id="work">
-    <h2>Work History</h2>
+    <h2>PROFESSIONAL EXPERIENCE</h2>
     <ul>
         <li>
             <strong>Marketer</strong> - CARSPA AUTOMOTIVE (2024)
