--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         .hero img {
             width: 100%;
-            height: 70vh;
+            height: auto;
             object-fit: cover;
             filter: brightness(0.5);
         }
