--- a/index2.html
+++ b/index2.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Evanson Mwangi - Portfolio</title>
 <style>
 .portfolio-container {
   background: #fff;
@@ -318,7 +324,8 @@
   }
 }
 </style>
-
+</head>
+<body>
 <div class="portfolio-container">
   <header class="header-section">
     <nav class="nav-wrapper">
@@ -418,3 +425,5 @@
     <p>Made with ❤️</p>
   </footer>
 </div>
+</body>
+</html>
