--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                 </div>
             </div>
             <div class="hero-image-container">
-                <img src="profile.jpg" alt="Evanson Mwangi" class="hero-image">
+                <img src="DSC_0923.jpg" alt="Evanson Mwangi" class="hero-image">
             </div>
         </section>
 
