--- a/index.html
+++ b/index.html
@@ -239,16 +239,6 @@
       margin-top: 21px;
     }
   }
-  .visually-hidden {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    border: 0;
-  }
   }
     .software-partners {
     background-color: rgba(248, 248, 248, 1);
@@ -1033,21 +1023,22 @@
 </style>
  </head>
  <body>
-
-<nav class="nav-container">
-  <div class="brand-container">
-    <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/af4596ae2df44527a335f5ee97d4bcd7/671edbfe0268a0611b3c2700f2bda78df25508a1432826a3d8b1411180f2eb53?apiKey=af4596ae2df44527a335f5ee97d4bcd7&" alt="" class="brand-logo" />
-    <div class="brand-name">EVANSON</div>
-  </div>
-  <div class="nav-links">
-    <a href="#" class="nav-item">Home</a>
-    <a href="#" class="nav-item">About Me</a>
-    <a href="#" class="nav-item">Services</a>
-    <a href="#" class="nav-item">Blog</a>
-    <a href="#" class="nav-item">Contact Me</a>
-  </div>
-  <button class="chat-button" tabindex="0">Let's chat</button>
-</nav>
+<header>
+  <nav class="nav-container">
+    <div class="brand-container">
+      <img loading="lazy" src="https://cdn.builder.io/api/v1/image/assets/af4596ae2df44527a335f5ee97d4bcd7/671edbfe0268a0611b3c2700f2bda78df25508a1432826a3d8b1411180f2eb53?apiKey=af4596ae2df44527a335f5ee97d4bcd7&" alt="" class="brand-logo" />
+      <div class="brand-name">EVANSON</div>
+    </div>
+    <div class="nav-links">
+      <a href="#" class="nav-item">Home</a>
+      <a href="#" class="nav-item">About Me</a>
+      <a href="#" class="nav-item">Services</a>
+      <a href="#" class="nav-item">Blog</a>
+      <a href="#" class="nav-item">Contact Me</a>
+    </div>
+    <button class="chat-button" tabindex="0">Let's chat</button>
+  </nav>
+</header>
    <main>
      <section class="hero-section">
   <div class="hero-content-wrapper">
