--- a/indel.html
+++ b/indel.html
@@ -38,7 +38,7 @@
         </div>
         <div>
           <img
-            src="https://placehold.co/200x200/6B7280/6B7280"
+            src="DSC_093.Jpg"
             alt="Profile photo of Evanson Mwangi"
             class="rounded-full h-[200px] w-[200px]"
             loading="lazy"
