--- a/indel.html
+++ b/indel.html
@@ -38,7 +38,7 @@
         </div>
         <div>
           <img
-            src="DSC_093.Jpg"
+            src="DSC_0923.jpg"
             alt="Profile photo of Evanson Mwangi"
             class="rounded-full h-[200px] w-[200px]"
             loading="lazy"
