--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       >
         <div class="flex-1">
           <h1 class="mb-5 text-3xl font-extrabold text-white max-sm:text-2xl">
-            EVANSON MWANGI
+            HI, I AM EVANSON MWANGI
           </h1>
           <p class="mb-5 text-base leading-relaxed text-white">
             I am a scientist, researcher, and innovation professional with a
@@ -131,11 +131,11 @@
           </p>
 
           <figure>
-            <img
-              src="https://placehold.co/400x300/E5E7EB/E5E7EB"
-              alt="Bank work"
-              class="w-full h-auto rounded-lg max-w-[400px] max-sm:max-w-full"
-            />
+           <img
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/cc6c23bdda4b315eaed2f166f5406aad85b81af3?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Responsive image"
+          class="responsive-image"
+        />
           </figure>
         </article>
 
