--- a/index.html
+++ b/index.html
@@ -167,10 +167,10 @@
 
           <figure>
             <img
-              src="https://placehold.co/400x300/4B5563/4B5563"
-              alt="Sales charts"
-              class="w-full h-auto rounded-lg max-w-[400px] max-sm:max-w-full"
-            />
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/7e9aca59bb6e59b69546e3ea91b8c4333fab3e71?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Featured image"
+          class="featured-image"
+        />
           </figure>
         </article>
 
@@ -202,10 +202,10 @@
 
           <figure>
             <img
-              src="https://placehold.co/400x300/9CA3AF/9CA3AF"
-              alt="Finance work"
-              class="w-full h-auto rounded-lg max-w-[400px] max-sm:max-w-full"
-            />
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/78ab78bf4cc75fe0366a3698fd4656a4fd5de440?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Featured image"
+          class="responsive-image"
+        />
           </figure>
         </article>
       </div>
@@ -239,10 +239,10 @@
         <article class="p-5 rounded-lg bg-neutral-900">
           <figure>
             <img
-              src="https://placehold.co/400x300/1F2937/1F2937"
-              alt="Statistical Data Analysis"
-              class="mb-4 w-full h-auto"
-            />
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/78ab78bf4cc75fe0366a3698fd4656a4fd5de440?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Featured image"
+          class="responsive-image"
+        />
           </figure>
           <h3 class="mb-2.5 text-lg font-bold">STATISTICAL DATA ANALYSIS</h3>
           <a
@@ -257,10 +257,10 @@
         <article class="p-5 rounded-lg bg-neutral-900">
           <figure>
             <img
-              src="https://placehold.co/400x300/374151/374151"
-              alt="Marketing"
-              class="mb-4 w-full h-auto"
-            />
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/78ab78bf4cc75fe0366a3698fd4656a4fd5de440?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Featured image"
+          class="responsive-image"
+        />
           </figure>
           <h3 class="mb-2.5 text-lg font-bold">MARKETING</h3>
           <a
@@ -275,9 +275,10 @@
         <article class="p-5 rounded-lg bg-neutral-900">
           <figure>
             <img
-              src="https://placehold.co/400x300/374151/374151"
-              alt="Lead Generation"
-              class="mb-4 w-full h-auto"
+          src="https://cdn.builder.io/api/v1/image/assets/TEMP/78ab78bf4cc75fe0366a3698fd4656a4fd5de440?placeholderIfAbsent=true&apiKey=af4596ae2df44527a335f5ee97d4bcd7"
+          alt="Featured image"
+          class="responsive-image"
+        />ss="mb-4 w-full h-auto"
             />
           </figure>
           <h3 class="mb-2.5 text-lg font-bold">LEAD GENERATION</h3>
