--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
             HI, I AM EVANSON MWANGI
           </h1>
           <p class="mb-5 text-base leading-relaxed text-white">
-            I am a scientist, researcher, and innovation professional with a
-            proven track record in excel. Experienced in developing and
-            implementing next generation data at an enterprise level.
+            I am a committed, versatile, and innovative professional with a proven track record in asset
+finance, sales,marketing, and lead generation with an educational background in BSc in
+Economics and Statistics. I am also deeply passionate and interested in programming, software
+development, data analysis, and artificial intelligence, constantly driven by curiosity and a
+desire to learn more in these fields.
           </p>
           <p class="mb-5 text-base leading-relaxed text-white">
-            I am passionate about data analytics, artificial intelligence in
+            I am  also passionate about data analytics, artificial intelligence in
             development, software development, data analytics, and artificial
             intelligence. I am always looking for opportunities to learn more in
             these fields.
@@ -156,13 +158,12 @@
           </h3>
 
           <p class="mb-5 text-base leading-relaxed text-white">
-            At my current role in a microfinance institution that specializes in
-            issuing car loans, I have successfully contributed to lead
-            generation efforts, resulting in a combined loan value of 33
-            million. Through strategic outreach and customer engagement, I
-            helped expand our client base and support the growth of our car loan
-            portfolio, demonstrating a strong commitment to both financial
-            inclusion and business development.
+           Established and grew Carspa Automotive's Ltd social media pages from 0 followers to
+over 400 followers with an estimated total posts of over 500.
+● Played a key role in increasing the company's revenue by 400,000 per month, growing it
+from 1 million  to 1.4 million in under two months from February to April 2024.
+● Curated engaging content across multiple platforms such as Facebook, Twitter, and
+TikTok effectively.
           </p>
 
           <figure>
@@ -191,13 +192,11 @@
           </h3>
 
           <p class="mb-5 text-base leading-relaxed text-white">
-            At my current role in a microfinance institution that specializes in
-            issuing car loans, I have successfully contributed to lead
-            generation efforts, resulting in a combined loan value of 33
-            million. Through strategic outreach and customer engagement, I
-            helped expand our client base and support the growth of our car loan
-            portfolio, demonstrating a strong commitment to both financial
-            inclusion and business development.
+         I engaged prospective clients through proactive cold calling, client meetups and
+personalized outreach strategies such as presenting tailored financial proposals rather
+than generic offers, which led to an increase in the company's client loan base. I also collected client financial documents such as payslips,bank statements, mpesa
+statements and conducted thorough financial assessments and risk analysis to
+determine client loan eligibility.
           </p>
 
           <figure>
