--- a/index.html
+++ b/index.html
@@ -292,6 +292,8 @@ determine client loan eligibility.
     </section>
     <div class="px-32 py-16 bg-black max-md:p-10 max-sm:p-5">
   <h2 class="mb-10 text-2xl font-extrabold text-white">Get in Touch</h2>
+        <h2 class="mb-10 text-2xl font-extrabold text-white">Call O742440052 </h2>
+
   <form
     class="flex flex-col gap-5 max-w-[600px]"
     aria-labelledby="contact-form-heading"
