--- a/index.html
+++ b/index.html
@@ -36,6 +36,21 @@
         white-space: nowrap;
         cursor: pointer;
       }
+     .image-column {
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        line-height: normal;
+        width: 39%;
+        margin-left: 20px;
+      }
+
+      .profile-image {
+        aspect-ratio: 1;
+        object-fit: contain;
+        object-position: center;
+        width: 100%;
+      }
 
   </style>
   <body>
